[package]
name = "pg-fibertools"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = { version = "1.1", optional = true }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
gzp = { version = "1.0" }
log = "0.4.27"
natord = "1.0.9"
needletail = "0.5"
num-format = "0.4.4"
rayon = "1.10"
niffler = { version = "3.0.0", default-features = false, features = ["gz"] }
regex = "1.11"
rust-htslib = "0.49"
snap = { version = "1.1", optional = true }
