[package]
name = "pg-fibertools"
version = "0.1.0"
edition = "2024"

[dependencies]
# the essentials
rust-htslib = "0.49"
clap = { version = "4.5.37", features = ["derive"] }
rayon = "1.10"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11"
linear-map = "1.2.0"
anyhow = "1.0.0"
duct = "1.0.0"
# Often used
colored = "3.0.0"
natord = "1.0.9"
needletail = "0.5"
num-format = "0.4.4"
assert_cmd = "2.0.11"
# compression reading and writing
snap = { version = "1.1", optional = true }
gzp = { version = "1.0" }
flate2 = { version = "1.1", optional = true }
niffler = { version = "3.0.0", default-features = false, features = ["gz"] }
